<?xml version="1.0"?>
<package format="2">
  <name>fkie_iop_node_manager</name>
  <version>0.9.0</version>
  <description>IOP Node Manager - Python router for IOP messages.</description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <author email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</author>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <depend>python-ruamel.yaml</depend>
</package>
